Fix spacing on mobile styles

--- a/next-app/styles/_site.scss
+++ b/next-app/styles/_site.scss
@@ -24,7 +24,7 @@ code {
 
   @media screen and (max-width: 900px) {
     transform: scale(2.0);
-    height: 15rem;
+    height: 18rem;
   }
 
 }
@@ -33,7 +33,7 @@ main {
   margin-top: 10rem;
 
   @media screen and (max-width: 900px) {
-    margin-top: 23rem;
+    margin-top: 28rem;
   }
 
 }
